--- a/index.html
+++ b/index.html
@@ -7,23 +7,25 @@
     <title>Instagram</title>
 </head>
 <body>
+
+
     <div class="instagram-wrapper">
         <div class="instagram-phone">
             <img src="./img/instagram-celular.png" alt="celular">
         </div>
         <div class="instagram-continue">
             <div class="group">
-                <img src="./img/instagram-logo.png" class="instagram-logo" alt="instagram logo">
+                <img src="./img/pngkey.com-instagram-logo-png-transparent-287308 (1).png" class="instagram-logo" alt="instagram logo">
                 <div class="profile-photo">
-                    <img src="./img/perfil-instagram.jpg" alt="foto de perfil">
+                    <img src="./img/Captura de tela 2022-04-13 083823.png" alt="foto de perfil">
                 </div>
-                <a href="#" class="instagram-login">Continue como sprucegabriela</a>
+                <a href="#" class="instagram-login">Continue como andreylucas</a>
                 <a href="#" class="instagram-logout">Remover conta</a>
             </div>
             <div class="group">
-                <p class="not-account">Não é sprucegabriela?</p>
+                <p class="not-account">Não é andreylucas?</p>
                 <p class="not-account">
-                    <span class="link-blue">Alternar contas</span>
+                    <span class="link-blue">Alternar conta</span>
                     ou
                     <span class="link-blue">Inscreva-se</span>
                 </p>
